<resources>
    <string name="app_name">ReadCycle</string>
    <string name="navbar_buscar">Buscar</string>
    <string name="navbar_perfil">Perfil</string>
    <string name="navbar_biblioteca">Mi biblioteca</string>
    <string name="titbblioteca">Tu biblioteca</string>
    <string name="buscarLibro">Encuentra un libro</string>
    <string name="autor">Autor</string>
    <string name="titulo">Titulo</string>
    <string name="bus_usuario">Usuarios</string>
    <string name="aviso_no_opcion">Por favor, seleccione unna opción de búsqueda.</string>

    <!--Formulario añadir libro-->
    <string name="titaddlibro">Añadir libro</string>
    <string name="form_titulolibro">Titulo Libro</string>
    <string name="form_genero">Género</string>
    <string name="form_numpaginas">Num. Páginas</string>
    <string name="form_libroestado">Estado del libro</string>
    <string name="form_resumen">Resumen</string>
    <string name="form_añadir">Añadir</string>
    <string name="MSG_FORM_INCOMPLETO">Formulario incompleto</string>
    <string name="MSG_EXITO">Libro añadido con éxito</string>
    <string name="MSG_ERROR_GENERAL">Algo ha salido mal. Vuelve a intentarlo</string>
    <string name="MSG_FORM_INCOMPLETO_FOTO">Formulario incompleto. Incluye una foto.</string>
    <string name="reset_btn">RESET.</string>
    <string name="nogeneros">No hay generos añadidos </string>
    <string name="generos_añadidos">Generos añadidos: </string>
    <string name="minimo_un_genero">Incluye al menos un género </string>


    <!--Formulario login y registro-->
    <string name="correo">Correo electronico</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="contraseñaConfirm">Confirmar Contraseña</string>
    <string name="entrar">Iniciar sesión</string>
    <string name="entrarGoogle">Entrar con Google</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrarseGoogle">Registrarse con Google</string>
    <string name="contacto">Forma de contacto</string>
    <string name="zona">Zona de localización</string>

    <!--Manejo de errores en formularios de inicio y registro-->
    <string name="req">Requerido</string>
    <string name="errorNombre">Formato del nombre no válido</string>
    <string name="errorCorreo">Formato del correo no válido</string>
    <string name="errorContraseña">La contraseña debe tener almenos 6 caracteres y un número</string>
    <string name="contraseñasDiferentes">Las contraseñas deben coincidir</string>
    <string name="correoExiste">Ya existe una cuenta con ese correo</string>
    <string name="datosNoValidos">El usuario o la contraseña son incorrectos</string>

    <!--Mostar búsqueda-->
    <string name="resultados">resultados:</string>

    <!-- Posibles estados de un libro -->
    <string-array name="books_array">
        <item>Nuevo</item>
        <item>Usado</item>
        <item>Antiguo</item>
        <item>Restaurado</item>
    </string-array>

    <!-- Posibles generos -->
    <string-array name="genero_array">
        <item>Acción</item>
        <item>Aventuras</item>
        <item>Biográfica</item>
        <item>Ciencia Ficción</item>
        <item>Comedia</item>
        <item>Drama</item>
        <item>Fantasia</item>
        <item>Infantil</item>
        <item>Juvenil</item>
        <item>Misterio</item>
        <item>Novela</item>
        <item>Poesía</item>
        <item>Policiaca</item>
        <item>Política</item>
        <item>Romance</item>
        <item>Suspense</item>
        <item>Teatro</item>
        <item>Terror</item>
    </string-array>

    <!--Menu perfil -->
    <string name="editar">Editar perfil</string>
    <string name="cerrar">Cerrar sesion</string>

    <!--Ver libro-->
    <string name="solicitar">Solicitar</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">¿Seguro que quieres eliminar este libro?</string>
    <string name="bibliotecOtro">Ir a biblioteca</string>
    <string name="MSG_ERROR_ELIMINAR">"El libro no se ha podido eliminar, vuelva a intentarlo más tarde"</string>
    <string name="noti_solicitud">Request Notification</string>
    <string name="body_noti">Enhorabuena! %1$s acaba de solicitar tu libro %2$s del autor %3$s. Echa un vistazo a su biblioteca y si algo te interesa, aqui tienes su contacta: %4$s</string>
    <string name="exito_noti">Notificación enviada con éxito</string>


    <!--UsuarioBiblioteca-->
    <string name="bibliotecaDe"> biblioteca</string>

    <!--Notificaciones-->
    <string name="notif">Notificaciones</string>
    <string name="fecha_n">Fecha</string>
    <string name="email_n">Email</string>
    <string name="mensa_n">Mensaje</string>
    <string name="no_notif">No hay notificaciones pendientes</string>


</resources>