<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/navbar"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="131dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/shape" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correodInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login"
                android:inputType="textEmailAddress"
                android:hint="@string/correo" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contraseñaInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_login"
                android:inputType="textPassword"
                android:hint="@string/contraseña" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:elevation="4dp"
            android:textColor="@color/fondoClaro"
            android:backgroundTint="@color/botonAdd"
            android:text="@string/entrar" />


        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/fondoClaro" />

        <Button
            android:id="@+id/loginGoogleBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:elevation="4dp"
            android:textColor="@color/botonAdd"
            android:backgroundTint="@color/fondoClaro"
            android:text="@string/entrarGoogle" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="200dp"
            android:background="@color/fondoClaro" />

        <TextView
            android:id="@+id/RegistrarseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/fondoClaro"
            android:textSize="18dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/registrarse" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>