<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentacion.BuscarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fondoClaro">

        <TextView
            android:id="@+id/tit_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="200dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/buscarLibro"
            android:textColor="@color/navbar"
            android:textSize="34sp"  />

        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape">

        </SearchView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="90dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/opt_busqueda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioButtonAutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/autor" />

                <RadioButton
                    android:id="@+id/radioButtonTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/titulo" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>