<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameBusqueda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoClaro"
    tools:context=".presentacion.MostrarResultadosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/n_barra_busqueda"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shape" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="90dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/opt_busqueda_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButtonAutor2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/autor" />

                <RadioButton
                    android:id="@+id/radioButtonTitulo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/titulo" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/bus_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <RadioButton
                    android:id="@+id/opt_users2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bus_usuario" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/n_resultados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="10"
                android:textColor="@color/navbar"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/resultados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/resultados"
                android:textColor="@color/navbar"
                android:textSize="17sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/r_mostrar_busquedas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            tools:listitem="@layout/card_busqueda" />

    </LinearLayout>
</FrameLayout>